# events

./: Cargo.toml  README.md  events-old.yaml  events.yaml  python.yaml  rust-old.yaml  rust.yaml
.github/workflows/: page.yml
src/: main.rs
static/js/: events.js
templates/: index.html  list.md  page.html  text.txt
