[package]
name = "events"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
chrono-tz = "0.10.1"
fs_extra = "1.3.0"
ical = { version = "0.11.0", features = ["generator"] }
liquid = "0.26"
liquid-core = "0.26"

serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
strum = "0.26.3"
strum_macros = "0.26.4"
